tests/ui/nll/issue-54556-temps-in-tail-diagnostic.stderr
error[E0597]: `_thing1` does not live long enough
  --> $DIR/issue-54556-temps-in-tail-diagnostic.rs:5:11
   |
LL |         let mut _thing1 = D(Box::new("thing1"));
   |             ----------- binding `_thing1` declared here
LL |         // D("other").next(&_thing1).end()
LL |         D(&_thing1).end()
   |         --^^^^^^^^-
   |         | |
   |         | borrowed value does not live long enough
   |         a temporary with access to the borrow is created here ...
LL |     }
   |     - `_thing1` dropped here while still borrowed
LL |
LL |     ;
   |     - ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `D`
   |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
   |
LL |         D(&_thing1).end();
   |                          +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
